GearsetPOC/force-app/main/default/objects/Accident__c/Accident__c.object-meta.xml
<CustomObject>
    <label>Safety Incident</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Incident Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Safety Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>