GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_abuse_type__c.field-meta.xml
<CustomField>
    <fullName>Accident_abuse_type__c</fullName>
    <description>only applicable to assaults</description>
    <label>Type of abuse</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Physical violence</fullName>
            </value>
            <value>
                <fullName>Threatening/intimidating behavior</fullName>
            </value>
            <value>
                <fullName>Foul and abusive language</fullName>
            </value>
            <value>
                <fullName>Telephone/email abuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>