GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Auto_Reminder_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Accident_Auto_Reminder_Send_Date__c</fullName>
    <description>For tracking the auto reminders</description>
    <label>Auto Reminder Send Date</label>
    <type>DateTime</type>
</CustomField>