GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_by_whom__c.field-meta.xml
<CustomField>
    <fullName>Accident_by_whom__c</fullName>
    <label>By whom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>