GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_cctv__c.field-meta.xml
<CustomField>
    <fullName>Accident_cctv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCTV requested</label>
    <type>Checkbox</type>
</CustomField>