GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Accident_Company_Name__c</fullName>
    <inlineHelpText>If contractor/third party sate company name</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>