GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Description__c.field-meta.xml
<CustomField>
    <fullName>Accident_Description__c</fullName>
    <label>Brief description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>