GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Accident_Detailed_Description__c</fullName>
    <label>Detailed Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>