GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_DOB_pax__c.field-meta.xml
<CustomField>
    <fullName>Accident_DOB_pax__c</fullName>
    <label>DOB (pax only)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>