GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Accident_Event_Date__c</fullName>
    <description>Date of accident</description>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>