GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Accident_Event_Time__c</fullName>
    <inlineHelpText>Time of day that event occured</inlineHelpText>
    <label>Event Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>