GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Accident_Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AT - Workplace accident</fullName>
            </value>
            <value>
                <fullName>AJ - Commuting Accident (continental based employee only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>