GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_exacerbating_factors__c.field-meta.xml
<CustomField>
    <fullName>Accident_exacerbating_factors__c</fullName>
    <label>Exacerbating factors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Age</fullName>
            </value>
            <value>
                <fullName>Gender</fullName>
            </value>
            <value>
                <fullName>Sexuality</fullName>
            </value>
            <value>
                <fullName>Race</fullName>
            </value>
            <value>
                <fullName>Religion</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Alcohol/drugs</fullName>
            </value>
            <value>
                <fullName>Disruption</fullName>
            </value>
            <value>
                <fullName>Lack of services on board</fullName>
            </value>
            <value>
                <fullName>Lack of Business Premier access</fullName>
            </value>
            <value>
                <fullName>Lack of luggage assistance/stowage</fullName>
            </value>
            <value>
                <fullName>Late boarding</fullName>
            </value>
            <value>
                <fullName>Ticket/fare dispute</fullName>
            </value>
            <value>
                <fullName>Other - please state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>