GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Exact_location__c.field-meta.xml
<CustomField>
    <fullName>Accident_Exact_location__c</fullName>
    <inlineHelpText>Exact location of accident, eg coach &amp; seat number</inlineHelpText>
    <label>Exact location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>