GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Fatality__c.field-meta.xml
<CustomField>
    <fullName>Accident_Fatality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fatality</label>
    <type>Checkbox</type>
</CustomField>