GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Fleet__c.field-meta.xml
<CustomField>
    <fullName>Accident_Fleet__c</fullName>
    <label>Fleet Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>374</fullName>
            </value>
            <value>
                <fullName>373</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>