GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_incident_type__c.field-meta.xml
<CustomField>
    <fullName>Accident_incident_type__c</fullName>
    <label>Type of incident</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Assault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>