GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Investigating_Manager__c.field-meta.xml
<CustomField>
    <fullName>Accident_Investigating_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigating Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Safety_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>