GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Investigation_Form__c.field-meta.xml
<CustomField>
    <fullName>Accident_Investigation_Form__c</fullName>
    <inlineHelpText>URL link to Accident Investigation Form document in Box</inlineHelpText>
    <label>Accident Investigation Form</label>
    <type>Url</type>
</CustomField>