GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Accident_Job_Title__c</fullName>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>