GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Open_recommendations__c.field-meta.xml
<CustomField>
    <fullName>Accident_Open_recommendations__c</fullName>
    <description>number of associated recommendations with Open status</description>
    <label>Open recommendations</label>
    <summaryFilterItems>
        <field>Accident_Recommendation__c.Recommendation_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Accident_Recommendation__c.Accident_Reference__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>