GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Other_type__c.field-meta.xml
<CustomField>
    <fullName>Accident_Other_type__c</fullName>
    <inlineHelpText>Specify another type of accident, eg explosion, vehicle collision, asphyxiation etc</inlineHelpText>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>