GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Photos__c.field-meta.xml
<CustomField>
    <fullName>Accident_Photos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photo(s) attached</label>
    <type>Checkbox</type>
</CustomField>