GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_reporting_user__c.field-meta.xml
<CustomField>
    <fullName>Accident_reporting_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person reporting the incident</inlineHelpText>
    <label>Reporting user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Safety_Incidents1</relationshipName>
    <type>Lookup</type>
</CustomField>