GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Reps_group__c.field-meta.xml
<CustomField>
    <fullName>Accident_Reps_group__c</fullName>
    <inlineHelpText>Email notifications will be sent to this group</inlineHelpText>
    <label>Reps group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AIT</fullName>
            </value>
            <value>
                <fullName>ECC</fullName>
            </value>
            <value>
                <fullName>EIT</fullName>
            </value>
            <value>
                <fullName>OBS</fullName>
            </value>
            <value>
                <fullName>SPI</fullName>
            </value>
            <value>
                <fullName>TMI</fullName>
            </value>
            <value>
                <fullName>Traction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>