GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Send_update__c.field-meta.xml
<CustomField>
    <fullName>Accident_Send_update__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Send update email to reporting user and line manager</inlineHelpText>
    <label>Send update</label>
    <type>Checkbox</type>
</CustomField>