GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_type__c.field-meta.xml
<CustomField>
    <fullName>Accident_type__c</fullName>
    <label>Accident type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact: moving vehicles or machinery</fullName>
            </value>
            <value>
                <fullName>Hit by moving, flying or falling object</fullName>
            </value>
            <value>
                <fullName>Contact: something fixed or stationary</fullName>
            </value>
            <value>
                <fullName>Injured handling, lifting or carrying</fullName>
            </value>
            <value>
                <fullName>Contact: electricity/elec discharge</fullName>
            </value>
            <value>
                <fullName>Contact: sharp object or material</fullName>
            </value>
            <value>
                <fullName>Contact/Exposure: Harmful substance</fullName>
            </value>
            <value>
                <fullName>Exposure:  fire/smoke/hot surface</fullName>
            </value>
            <value>
                <fullName>Slip/trip/fall: on the same level</fullName>
            </value>
            <value>
                <fullName>Slip/ trip/fall: from a height</fullName>
            </value>
            <value>
                <fullName>Slip/trip/fall: boarding/alighting</fullName>
            </value>
            <value>
                <fullName>Trapped by equipment or collapsed thing</fullName>
            </value>
            <value>
                <fullName>Another kind of accident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>