GearsetPOC/force-app/main/default/objects/Accident__c/fields/Accident_Update_sent__c.field-meta.xml
<CustomField>
    <fullName>Accident_Update_sent__c</fullName>
    <inlineHelpText>Date last update email sent</inlineHelpText>
    <label>Update sent</label>
    <type>Date</type>
</CustomField>