GearsetPOC/force-app/main/default/objects/Accident__c/fields/Case_Language__c.field-meta.xml
<CustomField>
    <fullName>Case_Language__c</fullName>
    <label>Case Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
                <default>true</default>
                <label>French</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>