GearsetPOC/force-app/main/default/objects/Accident__c/fields/Investigation_received__c.field-meta.xml
<CustomField>
    <fullName>Investigation_received__c</fullName>
    <description>Date of Investigation received.</description>
    <label>Investigation received</label>
    <type>Date</type>
</CustomField>