GearsetPOC/force-app/main/default/objects/Accident__c/fields/Safety_Member_Continent_2__c.field-meta.xml
<CustomField>
    <fullName>Safety_Member_Continent_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of  the the saftey team member responsible to handle incidents occured in the continent or to employees in the continent</description>
    <inlineHelpText>Please enter the name of the second Safety Team member in the continent if he/she need to be aware of this incident.</inlineHelpText>
    <label>Safety Member (Continent) 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Safety_Incidents3</relationshipName>
    <type>Lookup</type>
</CustomField>