GearsetPOC/force-app/main/default/objects/Accident__c/fields/Safety_Member_Formula__c.field-meta.xml
<CustomField>
    <fullName>Safety_Member_Formula__c</fullName>
    <description>Field to concatenate the 2 Safety member continent fields for the purpose of email template addressing</description>
    <formula>IF(  ISBLANK( Safety_Member_Continent__c ),(IF(ISBLANK( Safety_Member_Continent_2__c ),&quot;&quot;,  Safety_Member_Continent_2__r.FirstName &amp; &quot; &quot; &amp;  Safety_Member_Continent_2__r.LastName )),(IF(ISBLANK( Safety_Member_Continent_2__c ), Safety_Member_Continent__r.FirstName &amp; &quot; &quot; &amp;  Safety_Member_Continent__r.LastName, Safety_Member_Continent__r.FirstName &amp; &quot; &quot; &amp;  Safety_Member_Continent__r.LastName &amp;&quot; / &quot;&amp; Safety_Member_Continent_2__r.FirstName &amp; &quot; &quot; &amp;  Safety_Member_Continent_2__r.LastName  )))</formula>
    <label>Safety Member Formula</label>
    <type>Text</type>
</CustomField>