GearsetPOC/force-app/main/default/objects/Accident__c/recordTypes/Accident.recordType-meta.xml
<RecordType>
    <fullName>Accident</fullName>
    <active>true</active>
    <label>Accident</label>
</RecordType>