GearsetPOC/force-app/main/default/objects/Accident__c/recordTypes/Assault.recordType-meta.xml
<RecordType>
    <fullName>Assault</fullName>
    <active>true</active>
    <label>Assault</label>
</RecordType>