GearsetPOC/force-app/main/default/objects/Accident__c/validationRules/Accident_closure_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Accident_closure_rule</fullName>
    <active>true</active>
    <description>can only close an accident if all associated recommendations are closed</description>
    <errorConditionFormula>ISPICKVAL( Accident_Status__c , &quot;Closed&quot;) &amp;&amp;
Accident_Open_recommendations__c &gt; 0</errorConditionFormula>
    <errorMessage>Cannot close an accident with open recommendations</errorMessage>
</ValidationRule>