GearsetPOC/force-app/main/default/objects/Accident__c/listViews/Accidents.listView-meta.xml
<ListView>
    <fullName>Accidents</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Accident_Investigating_Manager__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Accidents_SMIS_Reference__c</columns>
    <columns>Accident_Status__c</columns>
    <columns>Accident_Description__c</columns>
    <columns>Accident_Event_Date__c</columns>
    <columns>Accident_Fatality__c</columns>
    <columns>Accident_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Accident__c.Accident</value>
    </filters>
    <label>Accidents</label>
    <language>en_US</language>
</ListView>