GearsetPOC/force-app/main/default/objects/Accident__c/listViews/All_accidents_and_assaults.listView-meta.xml
<ListView>
    <fullName>All_accidents_and_assaults</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Accident_Status__c</columns>
    <columns>Accident_Investigating_Manager__c</columns>
    <columns>Accident_Description__c</columns>
    <columns>Accident_Event_Date__c</columns>
    <columns>Accident_Full_Name__c</columns>
    <columns>Accident_Location__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All accidents and assaults</label>
</ListView>