GearsetPOC/force-app/main/default/objects/Accident__c/listViews/Assaults.listView-meta.xml
<ListView>
    <fullName>Assaults</fullName>
    <columns>NAME</columns>
    <columns>Accident_Investigating_Manager__c</columns>
    <columns>Accident_Status__c</columns>
    <columns>Accident_Description__c</columns>
    <columns>Accident_Event_Date__c</columns>
    <columns>Accident_Location__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Accident__c.Assault</value>
    </filters>
    <label>Assaults</label>
    <language>en_US</language>
</ListView>