GearsetPOC/force-app/main/default/objects/Accident__c/listViews/Open_Accidents.listView-meta.xml
<ListView>
    <fullName>Open_Accidents</fullName>
    <columns>NAME</columns>
    <columns>Accidents_SMIS_Reference__c</columns>
    <columns>Accident_Status__c</columns>
    <columns>Accident_Event_Date__c</columns>
    <columns>Accident_Description__c</columns>
    <columns>Accident_Location__c</columns>
    <columns>Accident_Fleet__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Accident_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Accident__c.Accident</value>
    </filters>
    <label>Open Accidents</label>
    <language>en_US</language>
</ListView>