GearsetPOC/force-app/main/default/objects/Accident__c/listViews/Safety_Team_Accident.listView-meta.xml
<ListView>
    <fullName>Safety_Team_Accident</fullName>
    <filterScope>Queue</filterScope>
    <label>Safety Team Queue</label>
    <queue>Safety_Team</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>